--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ReactoLight</title>
+  <meta name="description" content="Here players must quickly click on randomly lit buttons (lights) to score points before time runs out. This project is responsive and adapts to different devices and orientations.">
+  <meta name="author" content="nanimonakatta">
+  <meta property="og:title" content="ReactoLight" />
+  <meta property="og:description" content="Here players must quickly click on randomly lit buttons (lights) to score points before time runs out. This project is responsive and adapts to different devices and orientations." />
+  <meta property="og:type" content="website" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="media.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <link rel="icon" href="data:,">
 </head>
 <body>
   <div class="main">
